force-app/main/default/objects/Binder_Asset__c/Binder_Asset__c.object-meta.xml
<CustomObject>
    <label>Binder Asset</label>
    <nameField>
        <displayFormat>BN-{000000}</displayFormat>
        <label>Binder Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Binder Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>