force-app/main/default/objects/Binder_Asset__c/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <label>Series</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vendor__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>10thirty</fullName>
            </value>
            <value>
                <fullName>15Thirty Collection</fullName>
            </value>
            <value>
                <fullName>Allora</fullName>
            </value>
            <value>
                <fullName>Amber Valley</fullName>
            </value>
            <value>
                <fullName>Americana</fullName>
            </value>
            <value>
                <fullName>Avenue One</fullName>
            </value>
            <value>
                <fullName>Beige and Brown</fullName>
            </value>
            <value>
                <fullName>Bella Via Stone</fullName>
            </value>
            <value>
                <fullName>Brilliante Glass</fullName>
            </value>
            <value>
                <fullName>Buenos Aires Mood</fullName>
            </value>
            <value>
                <fullName>Building Blox</fullName>
            </value>
            <value>
                <fullName>Candalara Glass</fullName>
            </value>
            <value>
                <fullName>Carriage House</fullName>
            </value>
            <value>
                <fullName>Casa California Terrain</fullName>
            </value>
            <value>
                <fullName>Cathedral Stone</fullName>
            </value>
            <value>
                <fullName>Chisel</fullName>
            </value>
            <value>
                <fullName>Classic Mosaics</fullName>
            </value>
            <value>
                <fullName>Color Blox</fullName>
            </value>
            <value>
                <fullName>Color Blox EC</fullName>
            </value>
            <value>
                <fullName>Color Blox Too</fullName>
            </value>
            <value>
                <fullName>Cotta Americana</fullName>
            </value>
            <value>
                <fullName>Cross Colors LP</fullName>
            </value>
            <value>
                <fullName>Cross Colors Mingle</fullName>
            </value>
            <value>
                <fullName>Cross Colors Solid</fullName>
            </value>
            <value>
                <fullName>Cross Tech</fullName>
            </value>
            <value>
                <fullName>Doga</fullName>
            </value>
            <value>
                <fullName>Echo Recycled Glass</fullName>
            </value>
            <value>
                <fullName>Elevations Haiku</fullName>
            </value>
            <value>
                <fullName>Empire</fullName>
            </value>
            <value>
                <fullName>Etch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>